whoops fixed entry spacing on month pages

--- a/main.css
+++ b/main.css
@@ -75,4 +75,5 @@ img
 	padding-right: 11px;
 	padding-left: 11px;
 	border-radius: 9px;
+	margin-bottom: 15px;
 }
